syntax="proto3";

package proto;
option go_package = "./;proto";

import "mom_common.proto";
import "agv_task_type.proto";
import "material_shelf_bin.proto";

message AGVTaskQueueInfo {
	//ID 
 	string id=1;
	//任务编号 
 	string taskNo=2;
	//创建时间 
    string createTime=3;
	//配料人员 
    string createUserID=4;
	//后续任务 
    bool continueTask=5;
	//当前状态 
 	string currentState=6;
	//事务状态 
    string transactionState=7;
	//状态变更时间 
    string lastUpdateTime=8;
	//备注 
 	string remark=9;
	//任务类型ID 
    string aGVTaskTypeID=10;
    AGVTaskTypeInfo aGVTaskType=11;
	//起点库位ID 
    string departureID=12;
 	MaterialShelfBinInfo departure=13;
	//终点库位ID 
    string destinationID=14;
    MaterialShelfBinInfo destination=15;
}

message QueryAGVTaskQueueRequest{
    // @inject_tag: uri:"pageIndex" form:"pageIndex"
    int64 pageIndex=1;
    // @inject_tag: uri:"pageSize" form:"pageSize"
    int64 pageSize=2;
    // @inject_tag: uri:"sortConfig" form:"sortConfig"
    string sortConfig=3;
    // 创建时间开始 
	// @inject_tag: uri:"createTime0" form:"createTime0"
    string createTime0=4;
	// 创建时间结束 
	// @inject_tag: uri:"createTime1" form:"createTime1"
    string createTime1=5;
	// 任务编号 
	// @inject_tag: uri:"taskNo" form:"taskNo"
    string taskNo=6;
}

message QueryAGVTaskQueueResponse{
    Code code=1;
    string message=2;
    repeated AGVTaskQueueInfo data=3;
    int64 pages=4;
    int64 records=5;
    int64 total=6;
}

message GetAllAGVTaskQueueResponse{
    Code code=1;
    string message=2;
    repeated AGVTaskQueueInfo data=3;
}

message GetAGVTaskQueueDetailResponse{
    Code code=1;
    string message=2;
    AGVTaskQueueInfo data=3;
}